[package]
name = "simpilrs"
version = "0.1.0"
authors = ["Hilmar Gústafsson <hilmargustafs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
thiserror = "1.0.20"
tracing = "0.1.19"
tracing-subscriber = {version = "0.2.11", features=["fmt"]}
